--- a/package.json
+++ b/package.json
@@ -6,27 +6,32 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^0.20.5",
+    "@expo/config-plugins": "~7.8.0",
     "axios": "^1.6.7",
-    "expo": "^49.0.0",
-    "expo-constants": "~14.4.2",
-    "expo-font": "~11.4.0",
-    "expo-linking": "~5.0.2",
-    "expo-router": "^2.0.4",
-    "expo-splash-screen": "~0.20.5",
-    "expo-status-bar": "~1.6.0",
-    "expo-updates": "~0.18.19",
+    "expo": "^50.0.6",
+    "expo-constants": "~15.4.5",
+    "expo-font": "~11.10.2",
+    "expo-linking": "~6.2.2",
+    "expo-router": "~3.4.7",
+    "expo-splash-screen": "~0.26.4",
+    "expo-status-bar": "~1.11.1",
+    "expo-updates": "~0.24.10",
+    "expo-web-browser": "~12.8.2",
+    "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.5",
-    "react-native-gesture-handler": "~2.12.0",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
+    "react-native": "0.73.4",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "babel-preset-expo": "^10.0.1",
     "react-native-dotenv": "^3.4.10"
   },
   "resolutions": {
